# html-ai-ready

./: .gitignore  LICENSE  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  tsup.config.ts  vitest.config.ts
.github/workflows/: release-native.yml  release.yml
docs/: index.html  modules.html
docs/assets/: highlight.css  navigation.js  search.js
docs/functions/: htmlToAiReady.html  htmlToAiReadyNative.html
docs/modules/: _internal_.html
docs/types/: Preset.html
docs/variables/: PRESET_FAST.html  PRESET_QUALITY.html  _internal_.PRESETS.html
examples/: htmlToAiReady.ts
native/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
native/src/: lib.rs
src/: index.ts
src/types/: index.d.ts
src/utilities/: cleanup_html.ts  normilize_html.ts  simplified_markdown.ts  striptag.ts
tests/: ai-quality.ts  htmlToAiReady.bench.ts  htmlToAiReady.test.ts
tests/data/: apple.html  mystofa.html  steam.html
tests/data/texts/: .gitignore
tests/utils/: cleanup_html.test.ts  normilize_html.test.ts  simplifiedMarkdown.test.ts  striptags.test.ts
