[package]
name = "html-ai-ready-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", features = ["napi4"] }
napi-derive = "2.12.2"
regex = "1.9.1"
once_cell = "1.18.0"
lol_html = "0.3"
html2md = "0.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1